log
Fri 17 Mar 2023 06:14:45 PM UTC: 
 exercises.c | 51 ++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 48 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:112:16: error: invalid type argument of unary ‘*’ (have ‘int’)
  112 |   v[i].datos = *valor;
      |                ^~~~~~
exercises.c:111:8: error: unused variable ‘ptrValor’ [-Werror=unused-variable]
  111 |   int *ptrValor = &valor;
      |        ^~~~~~~~
exercises.c: In function ‘crearPersona’:
exercises.c:75:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   75 |   scanf("%29[^\n]s", p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:77:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   77 |   scanf("%10[^\n]s", p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:79:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   79 |   scanf("%u", &p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d47c372
Fri 17 Mar 2023 06:16:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:75:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   75 |   scanf("%29[^\n]s", p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:77:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   77 |   scanf("%10[^\n]s", p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:79:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   79 |   scanf("%u", &p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
689f7a4
Fri 17 Mar 2023 06:19:32 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:76:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   76 |   scanf("%29[^\n]s", tempnombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:79:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   79 |   scanf("%10[^\n]s", temprut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:82:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   82 |   scanf("%u", &p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c8c4c8
Fri 17 Mar 2023 06:21:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:82:11: error: format ‘%u’ expects argument of type ‘unsigned int *’, but argument 2 has type ‘int’ [-Werror=format=]
   82 |   scanf("%u", p->edad);
      |          ~^   ~~~~~~~
      |           |    |
      |           |    int
      |           unsigned int *
exercises.c:76:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   76 |   scanf("%29[^\n]s", tempnombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:79:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   79 |   scanf("%10[^\n]s", temprut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:82:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   82 |   scanf("%u", p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
374dbe0
